--- a/Remidomo/res/xml/preferences.xml
+++ b/Remidomo/res/xml/preferences.xml
@@ -143,21 +143,24 @@
         <CheckBoxPreference
             android:key="night_highlight"
             android:title="@string/pref_night_title"
-            android:summary="@string/pref_night_summary"
+            android:summaryOn="@string/pref_night_summary_on"
+            android:summaryOff="@string/pref_night_summary_off"
             android:defaultValue="true"
             android:persistent="true" />
 
         <CheckBoxPreference
             android:key="dots_highlight"
             android:title="@string/pref_dots_title"
-            android:summary="@string/pref_dots_summary"
+            android:summaryOn="@string/pref_dots_summary_on"
+            android:summaryOff="@string/pref_dots_summary_off"
             android:defaultValue="true"
             android:persistent="true" />
         
         <CheckBoxPreference
             android:key="day_labels"
             android:title="@string/pref_days_title"
-            android:summary="@string/pref_days_summary"
+            android:summaryOn="@string/pref_days_summary_on"
+            android:summaryOff="@string/pref_days_summary_off"
             android:defaultValue="true"
             android:persistent="true" />
         
@@ -180,7 +183,8 @@
         <CheckBoxPreference
             android:key="notif_sound"
             android:title="@string/pref_sound_title"
-            android:summary="@string/pref_sound_summary"
+            android:summaryOn="@string/pref_sound_summary_on"
+            android:summaryOff="@string/pref_sound_summary_off"
             android:defaultValue="true"
             android:persistent="true" />
                 
