--- a/Remidomo/res/layout/dashboard.xml
+++ b/Remidomo/res/layout/dashboard.xml
@@ -120,11 +120,11 @@
             android:layout_below="@id/thermo_icon" />
         
         <LinearLayout
+            android:id="@+id/temps_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:orientation="horizontal" >
-            
         
         <RelativeLayout
             android:id="@+id/pool_layout"
