--- a/Remidomo/res/layout/dashboard.xml
+++ b/Remidomo/res/layout/dashboard.xml
@@ -61,8 +61,8 @@
 
         <ImageView
             android:id="@+id/train_unknown"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
             android:paddingRight="10px"
             android:paddingLeft="10px"
             android:layout_centerVertical="true"
