--- a/Remidomo/res/layout/train.xml
+++ b/Remidomo/res/layout/train.xml
@@ -15,8 +15,8 @@
 
         <ImageView
             	android:id="@+id/train_ok"
-            	android:layout_width="wrap_content"
-            	android:layout_height="wrap_content"
+            	android:layout_width="64dp"
+            	android:layout_height="64dp"
             	android:src="@drawable/check"
             	android:paddingRight="50px"
             	android:layout_toRightOf="@id/heure"
