--- a/Remidomo/res/layout/main.xml
+++ b/Remidomo/res/layout/main.xml
@@ -11,7 +11,7 @@
 
             <LinearLayout
                     android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="62dp"
                     android:layout_gravity="center_horizontal"
                     android:gravity="center"
                     android:background="@drawable/gradient"
