--- a/Remidomo/res/layout/thermo.xml
+++ b/Remidomo/res/layout/thermo.xml
@@ -67,6 +67,7 @@
 			app:dots_color="#00FFFF"
 			app:auto_range="false"
 	        app:tap_enabled="false"
+	        app:units="@string/degC"
     		android:background="#000000" />
  
     </RelativeLayout>
