--- a/Remidomo/res/xml/preferences.xml
+++ b/Remidomo/res/xml/preferences.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
+<PreferenceScreen
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res/com.remi.remidomo" >
 
-    <PreferenceCategory android:title="@string/pref_service" >
+    <PreferenceCategory
+        android:title="@string/pref_service" >
 
         <CheckBoxPreference
             android:defaultValue="true"
@@ -28,37 +31,46 @@
                 android:persistent="true"
                 android:summary="@string/pref_mode_summary"
                 android:title="@string/pref_mode_title" />
-            <EditTextPreference
+            <com.remi.remidomo.CustomEditTextPreference
                 android:defaultValue="1.2.3.4"
                 android:dialogTitle="@string/pref_ip_dialog"
                 android:key="ip_address"
                 android:persistent="true"
                 android:summary="@string/pref_ip_summary"
-                android:title="@string/pref_ip_title" />
-            <EditTextPreference
+                android:title="@string/pref_ip_title"
+                app:validator_ip="true" />
+            <com.remi.remidomo.CustomEditTextPreference
                 android:defaultValue="1234"
                 android:dialogTitle="@string/pref_port_rfxlan"
                 android:inputType="number"
                 android:key="rfx_port"
                 android:numeric="integer"
+                app:validator_int="true"
+                app:min_integer="1024"
+                app:max_integer="65535"
                 android:persistent="true"
                 android:summary="@string/pref_port_summary"
                 android:title="@string/pref_port_rfxlan" />
-            <EditTextPreference
+            <com.remi.remidomo.CustomEditTextPreference
                 android:defaultValue="1234"
                 android:dialogTitle="@string/pref_port_serveur"
                 android:inputType="number"
                 android:key="port"
                 android:numeric="integer"
+                app:validator_int="true"
+                app:min_integer="1024"
+                app:max_integer="65535"
                 android:persistent="true"
                 android:summary="@string/pref_port_summary"
                 android:title="@string/pref_port_serveur" />
-            <EditTextPreference
+            <com.remi.remidomo.CustomEditTextPreference
                 android:defaultValue="60"
                 android:dialogTitle="@string/pref_poll_dialog"
                 android:inputType="number"
                 android:key="client_poll"
                 android:numeric="integer"
+                app:validator_int="true"
+                app:min_integer="5"
                 android:persistent="true"
                 android:summary="@string/pref_poll_summary"
                 android:title="@string/pref_client_poll_title" />
@@ -68,12 +80,14 @@
 
     <PreferenceCategory android:title="@string/pref_general" >
 
-        <EditTextPreference
+        <com.remi.remidomo.CustomEditTextPreference
             android:defaultValue="365"
             android:dialogTitle="@string/pref_storelimit_dialog"
             android:inputType="number"
             android:key="loglimit"
             android:numeric="integer"
+            app:validator_int="true"
+            app:min_integer="1"
             android:persistent="true"
             android:summary="@string/pref_storelimit_summary"
             android:title="@string/pref_storelimit_title" />
@@ -90,12 +104,14 @@
                 android:summary="@string/pref_gare_summary"
                 android:title="@string/pref_gare_title" />
 
-            <EditTextPreference
+            <com.remi.remidomo.CustomEditTextPreference
                 android:defaultValue="15"
                 android:dialogTitle="@string/pref_poll_dialog"
                 android:inputType="number"
                 android:key="sncf_poll"
                 android:numeric="integer"
+                app:validator_int="true"
+                app:min_integer="5"
                 android:persistent="true"
                 android:summary="@string/pref_poll_summary"
                 android:title="@string/pref_poll_title" />
@@ -104,12 +120,14 @@
         <PreferenceScreen
             android:title="@string/pref_meteo"
             android:icon="@drawable/pref_meteo" >
-            <EditTextPreference
+            <com.remi.remidomo.CustomEditTextPreference
                 android:defaultValue="4"
                 android:dialogTitle="@string/pref_meteo_dialog"
                 android:inputType="number"
                 android:key="meteo_poll"
                 android:numeric="integer"
+                app:validator_int="true"
+                app:min_integer="1"
                 android:persistent="true"
                 android:summary="@string/pref_meteo_summary"
                 android:title="@string/pref_meteo_title" />
@@ -140,12 +158,14 @@
                 android:summaryOn="@string/pref_days_summary_on"
                 android:title="@string/pref_days_title" />
 
-            <EditTextPreference
+            <com.remi.remidomo.CustomEditTextPreference
                 android:defaultValue="10"
                 android:dialogTitle="@string/pref_plotlimit_dialog"
                 android:inputType="number"
                 android:key="plot_limit"
                 android:numeric="integer"
+                app:validator_int="true"
+                app:min_integer="1"
                 android:persistent="true"
                 android:summary="@string/pref_plotlimit_summary"
                 android:title="@string/pref_plotlimit_title" />
