Add a custom "jog dial" for integer preferences
- int prefs now natively persisted as ints
- introduce a method to upgrade data when service version is upgraded

--- a/Remidomo/res/values/attrs.xml
+++ b/Remidomo/res/values/attrs.xml
@@ -24,4 +24,11 @@
     <declare-styleable name="CustomTimePickerPreference">
         <attr name="defaultValue" format="integer"/>
     </declare-styleable>
+
+    <declare-styleable name="CustomSpinnerPreference">
+        <attr name="defaultVal" format="integer"/>
+        <attr name="min" format="integer"/>
+        <attr name="max" format="integer"/>
+    </declare-styleable>
+
 </resources>
