--- a/Remidomo/res/xml/preferences.xml
+++ b/Remidomo/res/xml/preferences.xml
@@ -39,38 +39,30 @@
                 android:summary="@string/pref_ip_summary"
                 android:title="@string/pref_ip_title"
                 app:validator_ip="true" />
-            <com.remi.remidomo.CustomEditTextPreference
-                android:defaultValue="1234"
+            <com.remi.remidomo.CustomSpinnerPreference
+                app:defaultVal="1234"
                 android:dialogTitle="@string/pref_port_rfxlan"
-                android:inputType="number"
                 android:key="rfx_port"
-                android:numeric="integer"
-                app:validator_int="true"
-                app:min_integer="1024"
-                app:max_integer="65535"
+                app:min="1024"
+                app:max="65535"
                 android:persistent="true"
                 android:summary="@string/pref_port_summary"
                 android:title="@string/pref_port_rfxlan" />
-            <com.remi.remidomo.CustomEditTextPreference
-                android:defaultValue="1234"
+            <com.remi.remidomo.CustomSpinnerPreference
+                app:defaultVal="1234"
                 android:dialogTitle="@string/pref_port_serveur"
-                android:inputType="number"
                 android:key="port"
-                android:numeric="integer"
-                app:validator_int="true"
-                app:min_integer="1024"
-                app:max_integer="65535"
+                app:min="1024"
+                app:max="65535"
                 android:persistent="true"
                 android:summary="@string/pref_port_summary"
                 android:title="@string/pref_port_serveur" />
-            <com.remi.remidomo.CustomEditTextPreference
-                android:defaultValue="60"
+            <com.remi.remidomo.CustomSpinnerPreference
+                app:defaultVal="60"
                 android:dialogTitle="@string/pref_poll_dialog"
-                android:inputType="number"
                 android:key="client_poll"
-                android:numeric="integer"
-                app:validator_int="true"
-                app:min_integer="5"
+                app:min="5"
+                app:max="500"
                 android:persistent="true"
                 android:summary="@string/pref_poll_summary"
                 android:title="@string/pref_client_poll_title" />
@@ -80,14 +72,12 @@
 
     <PreferenceCategory android:title="@string/pref_general" >
 
-        <com.remi.remidomo.CustomEditTextPreference
-            android:defaultValue="365"
+        <com.remi.remidomo.CustomSpinnerPreference
+            app:defaultVal="365"
             android:dialogTitle="@string/pref_storelimit_dialog"
-            android:inputType="number"
             android:key="loglimit"
-            android:numeric="integer"
-            app:validator_int="true"
-            app:min_integer="1"
+            app:min="30"
+            app:max="1000"
             android:persistent="true"
             android:summary="@string/pref_storelimit_summary"
             android:title="@string/pref_storelimit_title" />
@@ -104,14 +94,13 @@
                 android:summary="@string/pref_gare_summary"
                 android:title="@string/pref_gare_title" />
 
-            <com.remi.remidomo.CustomEditTextPreference
-                android:defaultValue="15"
+            <com.remi.remidomo.CustomSpinnerPreference
+                app:defaultVal="15"
                 android:dialogTitle="@string/pref_poll_dialog"
                 android:inputType="number"
                 android:key="sncf_poll"
-                android:numeric="integer"
-                app:validator_int="true"
-                app:min_integer="5"
+                app:min="5"
+                app:max="500"
                 android:persistent="true"
                 android:summary="@string/pref_poll_summary"
                 android:title="@string/pref_poll_title" />
@@ -120,14 +109,12 @@
         <PreferenceScreen
             android:title="@string/pref_meteo"
             android:icon="@drawable/pref_meteo" >
-            <com.remi.remidomo.CustomEditTextPreference
-                android:defaultValue="4"
+            <com.remi.remidomo.CustomSpinnerPreference
+                app:defaultVal="4"
                 android:dialogTitle="@string/pref_meteo_dialog"
-                android:inputType="number"
                 android:key="meteo_poll"
-                android:numeric="integer"
-                app:validator_int="true"
-                app:min_integer="1"
+                app:min="1"
+                app:max="12"
                 android:persistent="true"
                 android:summary="@string/pref_meteo_summary"
                 android:title="@string/pref_meteo_title" />
@@ -158,14 +145,12 @@
                 android:summaryOn="@string/pref_days_summary_on"
                 android:title="@string/pref_days_title" />
 
-            <com.remi.remidomo.CustomEditTextPreference
-                android:defaultValue="10"
+            <com.remi.remidomo.CustomSpinnerPreference
+                app:defaultVal="10"
                 android:dialogTitle="@string/pref_plotlimit_dialog"
-                android:inputType="number"
                 android:key="plot_limit"
-                android:numeric="integer"
-                app:validator_int="true"
-                app:min_integer="1"
+                app:min="1"
+                app:max="30"
                 android:persistent="true"
                 android:summary="@string/pref_plotlimit_summary"
                 android:title="@string/pref_plotlimit_title" />
