--- a/Remidomo/res/layout/train.xml
+++ b/Remidomo/res/layout/train.xml
@@ -10,6 +10,7 @@
             	android:layout_width="wrap_content"
             	android:layout_height="wrap_content"
             	android:layout_centerVertical="true"
+            	android:layout_marginBottom="13px"
             	android:textSize="34px"
             	android:text="" />
 
