Add a preference for power plot days number
(Limited to 2 days max. to avoid performance issues)

--- a/Remidomo/res/xml/preferences.xml
+++ b/Remidomo/res/xml/preferences.xml
@@ -196,6 +196,16 @@
   				android:persistent="true"
   				app:defaultValue="7" />
 
+            <com.remi.remidomo.CustomSpinnerPreference
+            	app:defaultVal="2"
+            	android:dialogTitle="@string/pref_energylimit_dialog"
+            	android:key="energy_limit"
+            	app:min="1"
+            	app:max="10"
+            	android:persistent="true"
+            	android:summary="@string/pref_energylimit_summary"
+            	android:title="@string/pref_energylimit_title" />
+
         </PreferenceScreen>
 
     </PreferenceCategory>
