--- a/Remidomo/res/layout/energy.xml
+++ b/Remidomo/res/layout/energy.xml
@@ -11,6 +11,29 @@
             android:layout_height="fill_parent"
             android:orientation="vertical" >
 
+            <RelativeLayout
+                android:layout_width="wrap_content"
+        		android:layout_height="wrap_content"
+        		android:paddingBottom="10px">
+
+            	<TextView
+            	    android:id="@+id/status_text"
+            	    android:layout_width="wrap_content"
+            		android:layout_height="wrap_content"
+                	android:text="Statut "
+                	android:textSize="40px" />
+
+            	<ImageView
+                	android:id="@+id/power_status"
+                	android:layout_width="wrap_content"
+                	android:layout_height="wrap_content"
+            		android:paddingLeft="10px"
+            		android:src="@drawable/meteo_unknown"
+            		android:layout_toRightOf="@id/status_text"
+            		android:layout_centerVertical="true" />
+
+            </RelativeLayout>
+
             <!-- Instant energy -->
             <RelativeLayout
                 android:layout_width="wrap_content"
