--- a/Internet@TV/app/stylesheets/Pool.css
+++ b/Internet@TV/app/stylesheets/Pool.css
@@ -1,11 +1,11 @@
 #ScenePool
 {
-    width: 940px;
+    width: 820px;
 	height: 400px;
     padding: 0;
     margin: 0;
     border: 0;
-	left:8px;
+	left:120px;
 	top:8px;
 
 	background-image:url('../../images/opacity.png');
@@ -13,13 +13,24 @@
     position: absolute;
 }
 
-#ScenePool #Graph
+#ScenePool #Title
+{
+	width:820px;
+	left:10px;
+	top:10px;
+	color:#ffffff;
+	text-align:center;
+	position:absolute;
+	font-style:italic;
+	font-size:24px;
+}
+
+#ScenePool #GraphPool
 {
 	background-color:#000000;
 	width:800px;
 	height:300px;
 	position:absolute;
-	left:140px;
+	left:10px;
 	top:50px;
-	background-image:url('http://remidomo.hd.free.fr:2012/img/poolplot');
 }
