--- a/Internet@TV/app/stylesheets/Thermo.css
+++ b/Internet@TV/app/stylesheets/Thermo.css
@@ -13,15 +13,26 @@
     position: absolute;
 }
 
-#SceneThermo #Graph
+#SceneThermo #Title
+{
+	width:940px;
+	left:8px;
+	top:10px;
+	color:#ffffff;
+	text-align:center;
+	position:absolute;
+	font-style:italic;
+	font-size:24px;
+}
+
+#SceneThermo #GraphThermo
 {
 	background-color:#000000;
 	width:800px;
 	height:300px;
 	position:absolute;
-	left:140px;
+	left:130px;
 	top:50px;
-	background-image:url('http://remidomo.hd.free.fr:2012/img/thermoplot');
 }
 
 #SceneThermo #Dehors
@@ -30,7 +41,7 @@
 	width:75px;
 	height:75px;
 	position:absolute;
-	left:40px;
+	left:20px;
 	top:50px;
 	background-image:url('../../images/veranda.png');
 	background-repeat:no-repeat;
@@ -46,7 +57,7 @@
 	width:75px;
 	height:75px;
 	position:absolute;
-	left:40px;
+	left:20px;
 	top:160px;
 	background-image:url('../../images/garden.png');
 	background-repeat:no-repeat;
@@ -62,7 +73,7 @@
 	width:75px;
 	height:75px;
 	position:absolute;
-	left:40px;
+	left:20px;
 	top:270px;
 	background-image:url('../../images/pool_graph.png');
 	background-repeat:no-repeat;
