--- a/Remidomo/res/drawable/water_background.xml
+++ b/Remidomo/res/drawable/water_background.xml
@@ -2,4 +2,5 @@
 <bitmap
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:src="@drawable/water"
+    android:tileMode="mirror"
     android:gravity="bottom" />
