--- a/Remidomo/res/drawable-xhdpi/water_background.xml
+++ b/Remidomo/res/drawable-xhdpi/water_background.xml
@@ -2,5 +2,4 @@
 <bitmap
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:src="@drawable/water"
-    android:tileMode="mirror"
-    android:gravity="bottom" />
+    android:gravity="fill" />
