--- a/Remidomo/res/layout-v14/energy.xml
+++ b/Remidomo/res/layout-v14/energy.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res/com.remi.remidomo"
+    xmlns:app="http://schemas.android.com/apk/res/com.remi.remidomo.reloaded"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="horizontal"
@@ -114,7 +114,7 @@
 
         </LinearLayout>
 
-    	<com.remi.remidomo.SensorPlot
+    	<com.remi.remidomo.reloaded.SensorPlot
     		android:id="@+id/energyPlot"
     		android:layout_width="fill_parent"
     		android:layout_height="550px"
