--- a/Remidomo/res/layout-v14/thermo.xml
+++ b/Remidomo/res/layout-v14/thermo.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res/com.remi.remidomo"
+    xmlns:app="http://schemas.android.com/apk/res/com.remi.remidomo.reloaded"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:id="@+id/thermoView"
@@ -52,7 +52,7 @@
              android:src="@drawable/veranda" />
 		</LinearLayout>
 
-    	<com.remi.remidomo.SensorPlot
+    	<com.remi.remidomo.reloaded.SensorPlot
     		android:id="@+id/ThermoPlot"
     		android:layout_width="wrap_content"
     		android:layout_height="550px"
