--- a/Remidomo/res/xml/preferences.xml
+++ b/Remidomo/res/xml/preferences.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res/com.remi.remidomo" >
+    xmlns:app="http://schemas.android.com/apk/res/com.remi.remidomo.reloaded" >
 
     <PreferenceCategory
         android:title="@string/pref_service" >
@@ -31,7 +31,7 @@
                 android:persistent="true"
                 android:summary="@string/pref_mode_summary"
                 android:title="@string/pref_mode_title" />
-            <com.remi.remidomo.CustomEditTextPreference
+            <com.remi.remidomo.reloaded.CustomEditTextPreference
                 android:defaultValue="1.2.3.4"
                 android:dialogTitle="@string/pref_ip_dialog"
                 android:key="ip_address"
@@ -39,7 +39,7 @@
                 android:summary="@string/pref_ip_summary"
                 android:title="@string/pref_ip_title"
                 app:validator_ip="true" />
-            <com.remi.remidomo.CustomSpinnerPreference
+            <com.remi.remidomo.reloaded.CustomSpinnerPreference
                 app:defaultVal="1234"
                 android:dialogTitle="@string/pref_port_rfxlan"
                 android:key="rfx_port"
@@ -48,7 +48,7 @@
                 android:persistent="true"
                 android:summary="@string/pref_port_summary"
                 android:title="@string/pref_port_rfxlan" />
-            <com.remi.remidomo.CustomSpinnerPreference
+            <com.remi.remidomo.reloaded.CustomSpinnerPreference
                 app:defaultVal="1234"
                 android:dialogTitle="@string/pref_port_serveur"
                 android:key="port"
@@ -57,7 +57,7 @@
                 android:persistent="true"
                 android:summary="@string/pref_port_summary"
                 android:title="@string/pref_port_serveur" />
-            <com.remi.remidomo.CustomSpinnerPreference
+            <com.remi.remidomo.reloaded.CustomSpinnerPreference
                 app:defaultVal="60"
                 android:dialogTitle="@string/pref_poll_dialog"
                 android:key="client_poll"
@@ -72,7 +72,7 @@
 
     <PreferenceCategory android:title="@string/pref_general" >
 
-        <com.remi.remidomo.CustomSpinnerPreference
+        <com.remi.remidomo.reloaded.CustomSpinnerPreference
             app:defaultVal="365"
             android:dialogTitle="@string/pref_storelimit_dialog"
             android:key="loglimit"
@@ -94,7 +94,7 @@
                 android:summary="@string/pref_gare_summary"
                 android:title="@string/pref_gare_title" />
 
-            <com.remi.remidomo.CustomSpinnerPreference
+            <com.remi.remidomo.reloaded.CustomSpinnerPreference
                 app:defaultVal="15"
                 android:dialogTitle="@string/pref_poll_dialog"
                 android:inputType="number"
@@ -109,7 +109,7 @@
         <PreferenceScreen
             android:title="@string/pref_meteo"
             android:icon="@drawable/pref_meteo" >
-            <com.remi.remidomo.CustomSpinnerPreference
+            <com.remi.remidomo.reloaded.CustomSpinnerPreference
                 app:defaultVal="4"
                 android:dialogTitle="@string/pref_meteo_dialog"
                 android:key="meteo_poll"
@@ -145,7 +145,7 @@
                 android:summaryOn="@string/pref_days_summary_on"
                 android:title="@string/pref_days_title" />
 
-            <com.remi.remidomo.CustomSpinnerPreference
+            <com.remi.remidomo.reloaded.CustomSpinnerPreference
                 app:defaultVal="10"
                 android:dialogTitle="@string/pref_plotlimit_dialog"
                 android:key="plot_limit"
@@ -180,7 +180,7 @@
                 android:summaryOn="@string/pref_tarif_summary_on"
                 android:title="@string/pref_tarif_title" />
 
-            <com.remi.remidomo.CustomTimePickerPreference
+            <com.remi.remidomo.reloaded.CustomTimePickerPreference
   				android:summary="@string/pref_hchour_summary"
   				android:dialogLayout="@layout/time_preference"
   				android:title="@string/pref_hchour_title"
@@ -188,7 +188,7 @@
   				android:persistent="true"
   				app:defaultValue="23" />
 
-            <com.remi.remidomo.CustomTimePickerPreference
+            <com.remi.remidomo.reloaded.CustomTimePickerPreference
   				android:summary="@string/pref_hphour_summary"
   				android:dialogLayout="@layout/time_preference"
   				android:title="@string/pref_hphour_title"
@@ -196,7 +196,7 @@
   				android:persistent="true"
   				app:defaultValue="7" />
 
-            <com.remi.remidomo.CustomSpinnerPreference
+            <com.remi.remidomo.reloaded.CustomSpinnerPreference
             	app:defaultVal="2"
             	android:dialogTitle="@string/pref_energylimit_dialog"
             	android:key="energy_limit"
