--- a/Remidomo/res/values/attrs.xml
+++ b/Remidomo/res/values/attrs.xml
@@ -31,4 +31,8 @@
         <attr name="max" format="integer"/>
     </declare-styleable>
 
+    <declare-styleable name="CustomSpinner">
+        <attr name="linked_edit_text" format="reference"/>
+    </declare-styleable>
+
 </resources>
