--- a/Remidomo/res/layout/main.xml
+++ b/Remidomo/res/layout/main.xml
@@ -2,8 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res/com.remi.remidomo.reloaded"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
-        
+    android:layout_height="fill_parent"
+    android:background="#000000" >
+
         <RelativeLayout
             android:id="@+id/icons"
             android:layout_width="fill_parent"
