--- a/Remidomo/res/xml/pref_service.xml
+++ b/Remidomo/res/xml/pref_service.xml
@@ -55,4 +55,14 @@
             app:min="1024" />
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:title="@string/pref_maintenance" >
+
+        <Preference
+            android:title="@string/pref_reset"
+            android:key="reset_data"
+            android:summary="@string/pref_reset_summary"/>
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
